--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,7 +20,7 @@ security:
             anonymous:      true
             provider:       fos_userbundle
             form_login:
-                csrf_provider: form.csrf_provider
+                csrf_provider: security.csrf.token_manager
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
             logout:
